# .github

./: .STATUS  .gitignore  AGENT_FEATURES.md  AUTO_MERGE.md  BLACKROAD_ARCHITECTURE.md  BRAND.md  CECE_ABILITIES.md  CECE_PROTOCOLS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_API.md  CODESPACE_GUIDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  EMOJI_DICTIONARY.md  INDEX.md  INTEGRATIONS.md  MEMORY.md  MERGE_VERIFICATION.md  PR_HANDLER_SUMMARY.md  PR_MANAGEMENT.md  README.md  REPO_MAP.md  SECURITY.md  SIGNALS.md  STREAMS.md  SUPPORT.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  TODO.md  WIKI_COMPLETION_SUMMARY.md  WIKI_PUBLISHING.md  agent.json  bridge  coverage.xml  index.html  pyproject.toml  pytest.ini  quickstart.sh  requirements-test.txt
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.sessions/: active_sessions.json
agents/: ORCHESTRATION.md  README.md  types.yaml
blackroad-pixel/: app.js  index.html  scenes.js  style.css
codespace-agents/: ARCHITECTURE.md  MODELS.md  README.md  __init__.py  collaborate.py  examples.py  orchestrator.py
codespace_agents/: README.md  chat.py  collaborate.py  examples.py  orchestrator.py
docs/: SYNC.md
nodes/: README.md  alice.yaml  arcadia.yaml  aria.yaml  cecilia.yaml  lucidia.yaml  octavia.yaml  shellfish.yaml
notes/: README.md
orgs/: README.md
profile/: BLACKROAD_ARCHITECTURE.md  README.md  design-tokens.css
prototypes/: .gitignore
routes/: README.md  domains.yaml  registry.yaml
scripts/: README.md  pr_manager.py
tests/: __init__.py  (+3 more)
(+369 files in other folders)
